; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/extr_zd1201.c_zd1201_setconfig16.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/extr_zd1201.c_zd1201_setconfig16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zd1201 = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.zd1201*, i32, i16)* @zd1201_setconfig16 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @zd1201_setconfig16(%struct.zd1201* %0, i32 %1, i16 signext %2) #0 {
  %4 = alloca %struct.zd1201*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i16, align 2
  %7 = alloca i32, align 4
  store %struct.zd1201* %0, %struct.zd1201** %4, align 8
  store i32 %1, i32* %5, align 4
  store i16 %2, i16* %6, align 2
  %8 = load i16, i16* %6, align 2
  %9 = call i32 @cpu_to_le16(i16 signext %8)
  store i32 %9, i32* %7, align 4
  %10 = load %struct.zd1201*, %struct.zd1201** %4, align 8
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @zd1201_setconfig(%struct.zd1201* %10, i32 %11, i32* %7, i32 4, i32 1)
  ret i32 %12
}

declare dso_local i32 @cpu_to_le16(i16 signext) #1

declare dso_local i32 @zd1201_setconfig(%struct.zd1201*, i32, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
